--- a/fa20-labs/lab02/Makefile
+++ b/fa20-labs/lab02/Makefile
@@ -5,7 +5,7 @@ CFLAGS=-ggdb -Wall -std=c99
 LDFLAGS=
 
 ifeq ($(UNAME_S), Darwin)
-    MEMCHECK=valgrind --tool=memcheck --leak-check=full --track-origins=yes --dsymutil=yes
+    MEMCHECK=ASAN
 endif
 
 ifeq ($(UNAME_S), Linux)
@@ -31,6 +31,9 @@ $(BIT_OPS_PROG): $(BIT_OPS_OBJS)
 $(LFSR_PROG): $(LFSR_OBJS)
 	$(CC) $(CFLAGS) -g -o $(LFSR_PROG) $(LFSR_OBJS) $(LDFLAGS)
 
+$(VECTOR_PROG): $(VECTOR_OBJS)
+	$(CC) $(CFLAGS) -g -o $(VECTOR_PROG) $(VECTOR_OBJS) $(LDFLAGS)
+
 lfsr.c: lfsr.h
 test_lfsr.c: lfsr.h
 
@@ -41,7 +44,12 @@ test_bit_ops.c: bit_ops.h
 	$(CC) -c $(CFLAGS) $<
 
 vector-memcheck: $(VECTOR_PROG)
+ifeq ($(MEMCHECK),ASAN)
+	$(CC) $(CFLAGS) -fsanitize=address -o $(VECTOR_PROG)-asan $(VECTOR_OBJS) $(LDFLAGS) -fsanitize=address
+	./$(VECTOR_PROG)-asan
+else
 	$(MEMCHECK) ./$(VECTOR_PROG)
+endif
 
 clean:
 	-rm -rf core *.o *~ "#"*"#" Makefile.bak $(BINARIES) *.dSYM
